kubernetes/nextcloud/context-chat-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: context-chat-backend
spec:
  type: ClusterIP
  selector:
    app: context-chat-backend
  ports:
    - name: http
      port: 10034
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: context-chat-backend
  name: context-chat-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: context-chat-backend
  template:
    metadata:
      labels:
        app: context-chat-backend
    spec:
      containers:
        - image: ghcr.io/nextcloud/context_chat_backend:5.0.1
          imagePullPolicy: IfNotPresent
          name: context-chat-backend
          volumeMounts:
            - name: context-chat-backend-persistence
              mountPath: /app/persistence
          resources:
            requests:
              cpu: "2"
              memory: "4Gi"
            limits:
              cpu: "4"
              memory: "8Gi"
      volumes:
        - name: context-chat-backend-persistence
          persistentVolumeClaim:
            claimName: context-chat-backend-persistence-pvc
